--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace "com.mastergrowbot.app"
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.mastergrowbot.app"
         minSdk 23
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        targetSdk 35
+        versionCode 30
+        versionName "1.0.30"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -31,7 +31,7 @@ android {
         }
     }
 
-    // FIXED: Disable strict linting to prevent "7 tasks executed" silent failure
+    // FIXED: Disable strict linting to prevent silent failures
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
@@ -39,10 +39,10 @@ android {
 }
 
 dependencies {
-    // FIXED: Removed fileTree line because 'libs' folder does not exist
     implementation platform('com.google.firebase:firebase-bom:34.7.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation project(':capacitor-android')
+    
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
