--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,8 +9,9 @@ android {
         applicationId "com.mastergrowbot.app"
         minSdk 23
         targetSdk 35
-        versionCode 30
-        versionName "1.0.30"
+        // FIXED: Incremented to 31 to solve the "Version code used" error
+        versionCode 31
+        versionName "1.0.31"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
