--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,9 +9,9 @@ android {
         applicationId "com.mastergrowbot.app"
         minSdk 23
         targetSdk 35
-        // FIXED: Incremented to 33 for the new release
-        versionCode 33
-        versionName "1.0.33"
+        // FIXED: Incremented to 34 for a fresh, clean release
+        versionCode 34
+        versionName "1.0.34"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -32,7 +32,6 @@ android {
         }
     }
 
-    // FIXED: Disable strict linting to prevent silent failures
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
@@ -44,6 +43,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation project(':capacitor-android')
     
+    // CRITICAL FIXES FOR "APP HAS A BUG" CRASH:
+    // 1. Force the Android 15 compatible Splash Screen
+    implementation "androidx.core:core-splashscreen:$coreSplashScreenVersion"
+    // 2. Force the Android 15 compatible In-App Review (Fixes Play Core crash)
+    implementation "com.google.android.play:review:$playReviewVersion"
+
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
