--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,9 +9,9 @@ android {
         applicationId "com.mastergrowbot.app"
         minSdk 23
         targetSdk 35
-        // FIXED: Incremented to 46
-        versionCode 46
-        versionName "1.0.46"
+        // FIXED: Incremented to 47 to resolve "Version code used" error
+        versionCode 47
+        versionName "1.0.47"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -41,7 +41,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     
-    // RESTORED STANDARD DEPENDENCIES (Fixes the "Cannot access AppCompatActivity" error):
+    // STANDARD DEPENDENCIES (Required for MainActivity):
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
     implementation "androidx.core:core-ktx:$androidxCoreVersion"
@@ -56,7 +56,7 @@ dependencies {
     implementation "com.google.android.play:review:$playReviewVersion"
 
     // Testing
-    testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 }
