--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
     "@revenuecat/purchases-capacitor": "^8.0.0",
     "@capacitor-community/in-app-review": "^6.0.0"
   },
