--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,8 @@ workflows:
     instance_type: mac_mini_m2
     environment:
       groups:
-        - google_play # keystore credentials
+        - production  # FIXED: Changed from 'google_play' to your actual group name
+        - app_config  # Added to ensure your config variables are also loaded
       vars:
         CM_KEYSTORE_PATH: /tmp/keystore.jks
       node: 20
