--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,4 +4,5 @@ include ':app'
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
 
+// THIS IS THE CRITICAL LINE THAT WAS MISSING
 apply from: 'capacitor.settings.gradle'
