--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "^6.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
+    "@capacitor/browser": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@revenuecat/purchases-capacitor": "^8.0.0",
     "@capacitor-community/in-app-review": "^6.0.0"
