--- a/package.json
+++ b/package.json
@@ -11,25 +11,23 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/generative-ai": "^0.2.0",
-    "lucide-react": "^0.330.0",
+    "@google/generative-ai": "^0.21.0",
+    "lucide-react": "^0.475.0",
     "@supabase/supabase-js": "^2.39.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/browser": "^6.0.0",
-    "@capacitor/camera": "^6.0.0", 
+    "@capacitor/camera": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@revenuecat/purchases-capacitor": "^8.0.0",
     "@capacitor-community/in-app-review": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.2.0",
-    "vite": "^5.0.0",
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0",
     "@capacitor/cli": "^6.0.0"
   }
 }
