--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mastergrowbot-ai",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@google/generative-ai": "^0.21.0",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.344.0",
     "@supabase/supabase-js": "^2.39.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/android": "^6.0.0",
@@ -24,10 +24,12 @@
     "@capacitor-community/in-app-review": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.0.0",
     "@capacitor/cli": "^6.0.0"
   }
 }
