--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/genai": "^0.1.0", 
+    "@google/genai": "*", 
     "lucide-react": "^0.344.0",
     "@supabase/supabase-js": "^2.39.0",
     "@capacitor/core": "^6.0.0",
