--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "*", 
-    "lucide-react": "^0.344.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "@capacitor/core": "^6.0.0",
+    "@capacitor-community/in-app-review": "^6.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/browser": "^6.0.0",
-    "@capacitor/camera": "^6.0.0", 
+    "@capacitor/camera": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/share": "^6.0.4",
     "@capacitor/splash-screen": "^6.0.0",
+    "@google/genai": "*",
     "@revenuecat/purchases-capacitor": "^8.0.0",
-    "@capacitor-community/in-app-review": "^6.0.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.0.0",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.2.0",
-    "vite": "^5.0.0",
-    "@capacitor/cli": "^6.0.0"
+    "vite": "^5.0.0"
   }
 }
