--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,17 @@
 org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m
 android.useAndroidX=true
 android.enableJetifier=true
+
+# PERFORMANCE & TIMEOUTS
+# Increase network timeout to 5 minutes to prevent "Read timed out" on slow CI connections
+systemProp.http.connectionTimeout=300000
+systemProp.http.socketTimeout=300000
+
+# Enable parallel compilation to speed up tasks
+org.gradle.parallel=true
+
+# Enable build caching
+org.gradle.caching=true
+
+# Daemon should be enabled for generic environments, though CI might control this via flags
+org.gradle.daemon=true
