--- a/supabase/functions/gemini-gateway/deno.json
+++ b/supabase/functions/gemini-gateway/deno.json
@@ -1,3 +1,6 @@
 {
-  "imports": {}
+  "imports": {
+    "std/http/": "https://deno.land/std@0.168.0/http/",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.1.3"
+  }
 }
