--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,14 @@ entrypoint = "./functions/gemini-gateway/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/gemini-gateway/*.html" ]
+
+[functions.gemini-v3]
+enabled = true
+verify_jwt = true
+import_map = "./functions/gemini-v3/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/gemini-v3/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/gemini-v3/*.html" ]
