--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -57,3 +57,72 @@ workflows:
       email:
         recipients:
           - Agcomsol@gmail.com
+
+  ios-app-store:
+    name: MasterGrowbot iOS App Store
+    max_build_duration: 120
+    instance_type: mac_mini_m2
+    environment:
+      groups:
+        - ios-config # This MUST match the group name you created
+      node: 20.11.1
+      xcode: latest
+      cocoapods: default
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: ios # Only builds on the 'ios' branch
+          include: true
+    scripts:
+      - name: Install dependencies
+        script: |
+          rm -rf node_modules package-lock.json
+          npm install --legacy-peer-deps
+      
+      - name: Build Web App
+        script: |
+          npm run build
+          npx cap sync ios
+      
+      - name: Set up code signing settings on Xcode project
+        script: |
+          # Initialize the Keychain
+          keychain initialize
+
+          # Decode the P12 file from Env Var
+          echo $CM_CERTIFICATE | base64 --decode > /tmp/certificate.p12
+          
+          # Decode the Provisioning Profile from Env Var
+          echo $CM_PROVISIONING_PROFILE | base64 --decode > /tmp/provisioning_profile.mobileprovision
+
+          # Add to Keychain
+          keychain add-certificates \
+            --certificate /tmp/certificate.p12 \
+            --certificate-password "$CERTIFICATE_PASSWORD"
+
+          # Apply Profile to Xcode
+          xcode-project use-profiles --profile /tmp/provisioning_profile.mobileprovision
+
+      - name: Build IPA for App Store
+        script: |
+          # Build the archive and IPA using the profile we just set
+          xcode-project build-ipa \
+            --workspace "ios/App/App.xcworkspace" \
+            --scheme "App" \
+            --config Release \
+            --archive-flags "-destination 'generic/platform=iOS'"
+
+    artifacts:
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - *.DS_Store
+
+    publishing:
+      email:
+        recipients:
+          - Agcomsol@gmail.com
+      app_store_connect:
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
+        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
