--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -116,7 +116,7 @@ workflows:
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
-      - *.DS_Store
+      - "*.DS_Store"
 
     publishing:
       email:
