update codemagic env varibales by running terminal commands

--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,4 @@ _AG_SUPPORT_DOCS/**/*cannabis*
 _AG_SUPPORT_DOCS/**/*marijuana*
 
 # Excluded Guides (User Request)
-_AG_SUPPORT_DOCS/Phase6_Integration_Guide.md
+_AG_SUPPORT_DOCS/Phase6_Integration_Guide.mdPhase6_Keys/
