--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -85,24 +85,20 @@ workflows:
           npm run build
           npx cap sync ios
       
+      - name: Fetch signing files
+        script: |
+          app-store-connect fetch-signing-files "com.mastergrowbot.ai" \
+            --type IOS_APP_STORE \
+            --create
+            
+      - name: Set up keychain to be used for code signing using fetched certificates
+        script: |
+          keychain initialize
+          keychain add-certificates
+          
       - name: Set up code signing settings on Xcode project
         script: |
-          # Initialize the Keychain
-          keychain initialize
-
-          # Decode the P12 file from Env Var
-          echo $CM_CERTIFICATE | base64 --decode > /tmp/certificate.p12
-          
-          # Decode the Provisioning Profile from Env Var
-          echo $CM_PROVISIONING_PROFILE | base64 --decode > /tmp/provisioning_profile.mobileprovision
-
-          # Add to Keychain
-          keychain add-certificates \
-            --certificate /tmp/certificate.p12 \
-            --certificate-password "$CERTIFICATE_PASSWORD"
-
-          # Apply Profile to Xcode
-          xcode-project use-profiles --profile /tmp/provisioning_profile.mobileprovision
+          xcode-project use-profiles
 
       - name: Build IPA for App Store
         script: |
@@ -125,7 +121,3 @@ workflows:
       email:
         recipients:
           - Agcomsol@gmail.com
-      app_store_connect:
-        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
-        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
-        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
