--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -65,6 +65,9 @@ workflows:
     environment:
       groups:
         - ios-config # This MUST match the group name you created
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: com.mastergrowbot.ai
       node: 20.11.1
       xcode: latest
       cocoapods: default
@@ -84,12 +87,6 @@ workflows:
         script: |
           npm run build
           npx cap sync ios
-      
-      - name: Fetch signing files
-        script: |
-          app-store-connect fetch-signing-files "com.mastergrowbot.ai" \
-            --type IOS_APP_STORE \
-            --create
             
       - name: Set up keychain to be used for code signing using fetched certificates
         script: |
