--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -69,7 +69,7 @@ workflows:
         distribution_type: app_store
         bundle_identifier: com.mastergrowbot.ai
       node: 20.11.1
-      xcode: 15.4
+      xcode: latest
       cocoapods: default
     triggering:
       events:
